<resources>
    <string name="app_name">Dinder</string>
    <string name="home_text">Home</string>
    <string name="title_activity_third">ThirdActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="what_should_we_do_tonight">What should we do tonight?</string>
    <string name="let_us_help_you_decide_invite_a_partner_or_friend_to_start_swiping_and_come_to_a_decision_in_no_time">Let us help you decide! Invite a partner or friend to start swiping and come to a decision in no time!</string>
    <string name="todo">TODO</string>
    <string name="italian_restaurant">Gussie\'s Italian Restaurant</string>
    <string name="yes_food_icon">yes food icon</string>
    <string name="old_town">(Old Town, Chicago)</string>
    <string name="italian_desc">Gussie\'s is a project of passion serving friends and family. Inspired by grandmother Augusta \'Gussie\' and the times in the kitchen with grandma, helping her throw dinner parties for friends and family was always the best time.</string>
    <string name="like">LIKE</string>
    <string name="dislike">DISLIKE</string>
    <string name="tacos_rest">Broken English Taco Pub</string>
    <string name="lincoln_park">(Lincoln Park, Chicago)</string>
    <string name="tacos_desc">Located in three of Chicago\'s most vibrant neighborhoods. Broken English combines a unique take on Mexican street style tacos, refreshing beverages, eclectic music, and vivid artwork created by local talent.</string>
    <string name="quot_what_do_you_want_for_dinner_quot">\"What do you want for dinner?\"</string>
    <string name="let_us_help_browse_through_restaurants_near_you_and_your_partner_until_your_cravings_unite">Let us help! Browse through restaurants near you and your partner, until your cravings unite!</string>
    <string name="no_food_icon">no food icon</string>
    <string name="yes_food">yes food icon</string>
    <string name="pic_desc_italian">Gussies picture</string>
    <string name="shuffle_restaurants">Shuffle Restaurants!</string>
    <string name="pizza_title">Lou Malnati\'s Pizzeria</string>
    <string name="pizza_loc">(South Loop, Chicago)</string>
    <string name="pizza_desc">Chicago-style deep dish pizza is the heartiest of the pizza varieties and typically eaten with a knife and fork. The dough is patted out by hand and raised up high on the sides of a seasoned deep dish pizza pan.</string>
    <string name="sushi_title">Blue Sushi Sake Grill</string>
    <string name="sushi_desc">Order a spread of all your maki, nigiri and sashimi favs from the sushi bar, and throw in a few orders of starters from the grill. We\'ll stagger your plates so you can savor it all bite-by-bite, and maximize the sushi experience you\'ve been craving all week.</string>
    <string name="salad_title">Sweetgreen</string>
    <string name="river_south">(River South, Chicago)</string>
    <string name="salad_desc">Fresh salads, plates + grain bowls available for pickup and delivery every day, made in-house from scratch, using whole produce delivered that morning</string>
    <string name="click_the_button_below_to_see_where_your_night_will_go">Click the button below to see where your night will go!</string>
    <string name="reveal_my_meal">Reveal My Meal!</string>
    <string name="no_food_icon_match">no food icon_match</string>
    <string name="no_food_icon_match2">no food icon_match2</string>
    <string name="yes_food_icon_match">yes food icon</string>
    <string name="you_got_a_match">You got a match!</string>
    <string name="lets_eat">Let\'s Eat!</string>
    <string name="pic_desc_pizza">pic_desc_pizza</string>
    <string name="pic_desc_salad">pic_desc_salad</string>
    <string name="pic_desc_sushi">pic_desc_sushi</string>
    <string name="pic_desc_tacos">pic_desc_tacos</string>
</resources>